--- a/iOS/Demo--iOS--Info.plist
+++ b/iOS/Demo--iOS--Info.plist
@@ -19,5 +19,61 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UTExportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.image</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Foo</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
+			<key>UTTypeIdentifier</key>
+			<string>com.benkau.foo</string>
+			<key>UTTypeReferenceURL</key>
+			<string>https://benkau.com</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>foo</string>
+				</array>
+				<key>public.mime-type</key>
+				<array>
+					<string>image/foo</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
+	<key>UTImportedTypeDeclarations</key>
+	<array>
+		<dict>
+			<key>UTTypeConformsTo</key>
+			<array>
+				<string>public.image</string>
+			</array>
+			<key>UTTypeDescription</key>
+			<string>Bar</string>
+			<key>UTTypeIconFiles</key>
+			<array/>
+			<key>UTTypeIdentifier</key>
+			<string>com.benkau.bar</string>
+			<key>UTTypeReferenceURL</key>
+			<string>https://benkau.com</string>
+			<key>UTTypeTagSpecification</key>
+			<dict>
+				<key>public.filename-extension</key>
+				<array>
+					<string>bar</string>
+				</array>
+				<key>public.mime-type</key>
+				<array>
+					<string>image/bar</string>
+				</array>
+			</dict>
+		</dict>
+	</array>
 </dict>
 </plist>
