--- a/iOS/Demo--iOS--Info.plist
+++ b/iOS/Demo--iOS--Info.plist
@@ -19,6 +19,10 @@
 			</array>
 		</dict>
 	</dict>
+	<key>UIBackgroundModes</key>
+	<array>
+		<string>remote-notification</string>
+	</array>
 	<key>UTExportedTypeDeclarations</key>
 	<array>
 		<dict>
